src/test/deca/context/valid/class_extends.deca
class A{
int x;
}
class B extends A{
A a;
}
{
}
