src/test/deca/context/invalid/oparith_class.deca
class A {
}
{
A a;
int x;
a+x;
}